# design-patterns-c-

./: README.md
CRPT/: a.out  check_virtual.cpp  crtp_access.cpp  expanding_interface.cpp  register.cpp  visitor.cpp
CRPT/output/: crtp_access  visitor
Overload_resolution/: SFINAE.cpp  check_class.cpp  increment.cpp  is_class.cpp  template.cpp  test_sort.cpp  test_sort2.cpp  try_sort.cpp
Overload_resolution/output/: SFINAE  check_class  increment  is_class  test_sort2  try_sort
decorators/: a.out  adapter.cpp  basic.cpp
decorators/output/: basic
friend_factory/: friend.cpp  friend_template.cpp
friend_factory/output/: friend  friend_template
local_buffer_opt/: a.out  memory_cost.cpp  simple_String.cpp
methodchaining/: chain.cpp  chain2.cpp
methodchaining/output/: chain  chain2
policy/: similar_policy.cpp  smart_ptr.cpp
policy/output/: similar_policy  smart_ptr
scope_guard/: a.out  random.cpp  scope_guard2.cpp  scopeguard.cpp
scope_guard/output/: random  scope_guard2  scopeguard
singleton/: simplelogger.cpp
singleton/output/: simplelogger
swap/: st_swap.cpp
template/: class_templ.cpp  class_varidiac.cpp  classtemp.cpp  dynamic_cast.cpp  func_temp2.cpp  func_template.cpp  instantiate_template.cpp  lambda.cpp  overload_Set.cpp  private_virtual.cpp  template_fuc.cpp  template_p.cpp  vardiac.cpp  virtual.cpp
template_pattern/: steimplementation.cpp
test/src/: CMakeLists.txt  build.sh  object_counter.cpp  object_counter.h  object_counter_test.cpp
type_erasure/: erasure.cpp  smart_ptr.cpp
virtual_constructor/: factor.cpp  vc.cpp
(+5 files in other folders)
